tests/NormalTests/paczka1/small_fuzzy/28631337.err
Error in line 5: zu4mRbS S357 25,0
Error in line 15: oypqBDwJ AÑ03 22,4
Error in line 16: Okuwzrw A154 75,69
